--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,13 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.0.CR2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>6.3.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
