--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 			<version>6.3.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
