feat: criptografia e alterar email/senha implementado

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,6 +6,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA, SQL
 spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=create (CASO FOR REINICIAR O BANCO DE DADOS!!! APENAS USE EM AMBIENTE DE DEV OU TEST)
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Configuração de CORS
