--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,4 +10,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Configuração de CORS
-cors.allowedOrigins=http://localhost:3000/
+cors.allowedOrigins=http://localhost:3000
